# kratos-selfservice-ui-react-fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  poe.toml  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.devcontainer/scripts/: docker_completion.sh  post_create.sh
.github/workflows/: ci.yml
backend/src/kratos_selfservice_ui/: __init__.py  __main__.py  app.py  proxy.py  spa.py
examples/mounted/: host.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  basePath.ts  brand.css  main.tsx  ory.ts  router.tsx
frontend/src/components/: LogoutLink.tsx
frontend/src/constants/: routes.ts
frontend/src/hooks/: useFlow.ts
frontend/src/routes/: Error.tsx  Login.tsx  Recovery.tsx  Registration.tsx  Settings.tsx  Verification.tsx  Welcome.tsx
