[project]
name = "kratos-selfservice-ui"
version = "0.1.4"
description = "Mountable FastAPI + React reference self-service UI for Ory Kratos."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
authors = [{ name = "Siddhesh More" }]
keywords = ["ory", "kratos", "fastapi", "react", "self-service", "identity"]

dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.0",
    "uvicorn>=0.47.0",
]

[project.scripts]
kratos-selfservice-ui = "kratos_selfservice_ui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/kratos_selfservice_ui"]

[tool.hatch.build.targets.wheel.sources]
"backend/src" = ""

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
]

[tool.poe]
include = "poe.toml"
